# financial_stronghold

./: .env.production  .flake8  .gitignore  .mypy.ini  100_PERCENT_COVERAGE_IMPLEMENTATION_GUIDE.md  100_PERCENT_COVERAGE_SUMMARY.md  AGENT_TEAM_ASSIGNMENTS.md  AI_ORGANIZATIONAL_CHART_THEME_PROJECT.md  AI_THEME_TEAM_ORG_CHART.md  ALL_SPRINTS_FINAL_REPORT.md  API_WEBGUI_MAPPING.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DECISION_RECORD.md  ARCHITECTURE_FIXES.md  CHANGELOG.md  CODE_QUALITY_ANALYSIS.md  COMPLETE_EXECUTION_REPORT.md  COMPREHENSIVE_CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_IMPORT_ANALYSIS_SPRINT_PLAN.md  COMPREHENSIVE_REVIEW_SUMMARY.md  COMPREHENSIVE_SECURITY_ANALYSIS_REPORT.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TESTING_GUIDE_FINAL.md  COMPREHENSIVE_TESTING_GUIDE_FINAL_IMPLEMENTATION.md  COMPREHENSIVE_USER_GUIDE_WITH_VISUALS.md  CONTRIBUTING.md  CROSS_COMPARISON_SUMMARY.md  CUSTOM_THEME_SPRINT_PLAN.md  CUSTOM_WEBGUI_THEME_SPRINT_PLAN.md  DATA_INGESTION_GUIDE.md  DEPLOYMENT_FEATURE_VALIDATION_REPORT.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SUMMARY.md  DETAILED_COMPREHENSIVE_SPRINT_PLAN.md  DOCUMENTATION_ALIGNMENT_REPORT.md  Dockerfile  FEATURE_DEPLOYMENT_GUIDE.md  FINAL_DEPLOYMENT_READY_STATUS.md  FINAL_RELEASE_SUMMARY_v20250902_051242.md  (+78 more)
.github/: dependabot.yml
.github/workflows/: ci-cd-pipeline.yml
app/: __init__.py  admin.py  admin_original.py  api.py  api_django.py  api_views.py  apps.py  auth.py  context_processors.py  copilot_api.py  core_serializers.py  dashboard_service.py  django_audit.py  django_models.py  django_rbac.py  documentation_service.py  documentation_views.py  financial_models.py  import_models.py  ingestion_api.py  ingestion_models.py  ingestion_schemas.py  ingestion_service.py  ingestion_views.py  main.py  managers.py  middleware.py  models.py  monitoring.py  permissions.py  schemas.py  serializers.py  services.py  services_optimized.py  settings.py  tagging_models.py  tagging_service.py  transaction_analytics.py  transaction_classifier.py  urls.py  (+3 more)
app/api/: __init__.py  import_views.py  theme_views.py
app/core/: __init__.py  audit.py  models.py  rbac.py  tenant.py
app/import_models_pkg/: import_models.py
app/migrations/: 0001_initial.py  0002_add_indexes.py  0003_add_data_ingestion_models.py  0003_optimize_database_performance.py  0004_add_import_models.py  0005_add_theme_models.py  0005_user_preferences_and_ui_defaults.py
app/ml/: __init__.py  categorization_service.py
app/models/: __init__.py  import_models.py  theme_models.py
app/models_backup/: import_models.py
app/security/: __init__.py  monitoring.py
app/serializers/: __init__.py  core_serializers.py  django_serializers.py  import_serializers.py  theme_serializers.py
app/services/: __init__.py  copilot_service.py  excel_import_service.py  file_import_service.py  theme_service.py
app/tasks/: __init__.py  import_tasks.py
archive/2025-09-02_180606_repository_cleanup/: ARCHIVE_LOG.txt
archive/2025-09-02_180612_repository_cleanup/: ARCHIVE_INDEX.md  ARCHIVE_LOG.txt  README.md
ci/: Dockerfile.ci  deploy.sh  docker-compose.ci.optimized.yml  docker-compose.ci.yml  enhanced-debug-validation.sh  enhanced-test.sh  entrypoint.sh  frontend-modernization.sh  health-monitor.sh  performance-optimization.sh  quality-gate.sh  security-hardening.sh  security-scan.sh  service-validation.sh  type-check.sh  validate-deployment-demo.sh  validate-deployment-l1-l7.sh  validate-deployment.sh  validate-l1-configuration.sh  validate-l1-l7-demo.sh  validate-l2-startup.sh  validate-l3-connectivity.sh  validate-l4-functionality.sh  validate-l5-integration.sh  validate-l6-performance.sh  validate-l7-regression.sh
config/: __init__.py  api_optimization.py  caching_strategy.py  celery.py  database_optimization.py  input_validation.py  logging.py  monitoring.py  rate_limiting.py  security_headers.py  static_optimization.py  urls.minimal.py  urls.py  urls_minimal.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  local.py  minimal.py  production.py  testing.py  working.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CI_CD_PIPELINE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCUMENTATION_SUMMARY.md  FEATURE_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_FINAL_SUMMARY.md  INDEX.md  PRODUCTION_DEPLOYMENT_SCREENSHOTS.md  QUICK_START_GUIDE.md  SECURITY_MODEL.md  TESTING_GUIDE.md  index.md
docs/api/: modules.md  overview.md
docs/wiki/: faq.md  getting-started.md
environments/: .env.development  .env.production.example  .env.staging  .env.staging.example  .env.testing
logging/: fluentd.conf
logs/: .gitignore
monitoring/: prometheus.yml
requirements/: base.txt  base_fixed.txt  development.txt  production.txt  test.txt
scripts/: archive_cleanup.sh  build_docs.sh  deploy.sh  final_integration_test.py  generate-secret-key.py  generate_secret_key.py  penetration_test.py  setup-dev-env.sh  validate-config.py  validate_production_readiness.py  verify_versions.py
static/css/: accessibility.css  custom.css  dashboard.css  design-system.css  responsive.css  theme-editor.css  theme-system.css  themes.css
static/js/: api-integration.js  app.js  theme-editor.js  theme-engine.js  theme.js
test_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_api.py  test_infrastructure.py  test_models.py  test_tenant.py  test_tenant_logic.py  test_theme_api_integration.py  test_theme_models.py  test_theme_service.py  test_views.py
tests/frontend/: test_frontend_modernization.py
tests/integration/: __init__.py  test_comprehensive_integration.py  test_core_integration.py  test_dashboard_api.py  test_tagging_analytics_api.py  test_theme_settings_view.py  test_transaction_classification_api.py
tests/performance/: __init__.py  test_comprehensive_performance.py  test_performance_optimization.py
tests/regression/: __init__.py  test_comprehensive_regression.py
tests/security/: __init__.py  test_comprehensive_security.py  test_security.py  test_security_hardening.py
tests/unit/: __init__.py  test_100_percent_comprehensive_fixed.py  (+50 more)
(+60 files in other folders)
